force-app/main/default/objects/Brand_Warranty__c/Brand_Warranty__c.object-meta.xml
<CustomObject>
    <description>Brand warranty record per vehicle (standard or Brand 10).</description>
    <label>Brand Warranty</label>
    <nameField>
        <label>Warranty Number</label>
        <displayFormat>WAR-{00000}</displayFormat>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Brand Warranties</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>