force-app/main/default/objects/Brand_Warranty__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Customer account that owns this warranty.</description>
    <inlineHelpText>The customer this warranty belongs to.</inlineHelpText>
    <label>Customer Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Warranties</relationshipLabel>
    <relationshipName>Warranties</relationshipName>
    <type>Lookup</type>
</CustomField>