force-app/main/default/objects/Brand_Warranty__c/fields/All_Services_Authorized__c.field-meta.xml
<CustomField>
    <fullName>All_Services_Authorized__c</fullName>
    <defaultValue>true</defaultValue>
    <description>True if all services were performed at authorized <Brand> network. Required for <Brand> 10 eligibility.</description>
    <inlineHelpText><Brand> 10 requires every service in authorized network.</inlineHelpText>
    <label>All Services Authorized</label>
    <type>Checkbox</type>
</CustomField>