force-app/main/default/objects/Brand_Warranty__c/fields/Authorized_Dealer__c.field-meta.xml
<CustomField>
    <fullName>Authorized_Dealer__c</fullName>
    <description>Authorized dealer / service network where the vehicle was last serviced for warranty validity.</description>
    <inlineHelpText>Name of authorized Brand dealer.</inlineHelpText>
    <label>Authorized Dealer</label>
    <length>100</length>
    <type>Text</type>
</CustomField>