force-app/main/default/objects/Brand_Warranty__c/fields/Chassi__c.field-meta.xml
<CustomField>
    <fullName>Chassi__c</fullName>
    <description>VIN / chassi number for the vehicle covered by this warranty (used as external ID for lookups).</description>
    <externalId>true</externalId>
    <inlineHelpText>VIN/chassi (e.g., 33BE4L200063201) — used to match the warranty to the vehicle.</inlineHelpText>
    <label>Chassi</label>
    <length>20</length>
    <type>Text</type>
</CustomField>