force-app/main/default/objects/Brand_Warranty__c/fields/Claim_Count__c.field-meta.xml
<CustomField>
    <fullName>Claim_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of warranty claims made on this record.</description>
    <inlineHelpText>Count of warranty claims processed.</inlineHelpText>
    <label>Claim Count</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>