force-app/main/default/objects/Brand_Warranty__c/fields/Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Country_Code__c</fullName>
    <description>Country where this warranty is registered (AR=Argentina, BR=Brazil).</description>
    <inlineHelpText>AR or BR.</inlineHelpText>
    <label>Country Code</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AR</fullName>
                <default>true</default>
                <label>AR</label>
            </value>
            <value>
                <fullName>BR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>