force-app/main/default/objects/Brand_Warranty__c/fields/Coverage_Summary__c.field-meta.xml
<CustomField>
    <fullName>Coverage_Summary__c</fullName>
    <description>Human-readable summary of covered components (motor, transmission, ABS, etc.).</description>
    <inlineHelpText>What this warranty covers — used in voice/chat responses.</inlineHelpText>
    <label>Coverage Summary</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>