force-app/main/default/objects/Brand_Warranty__c/fields/Days_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Days_Remaining__c</fullName>
    <description>Calculated days remaining before the warranty expires (0 if expired).</description>
    <formula>IF(Expiry_Date__c &gt;= TODAY(), Expiry_Date__c - TODAY(), 0)</formula>
    <inlineHelpText>Days remaining on this warranty.</inlineHelpText>
    <label>Days Remaining</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>