force-app/main/default/objects/Brand_Warranty__c/fields/Eligible_Models__c.field-meta.xml
<CustomField>
    <fullName>Eligible_Models__c</fullName>
    <description>JSON list of models eligible for this warranty program (<Brand> 10 eligibility).</description>
    <inlineHelpText>JSON array, e.g., ["Corolla XEi G12","Corolla Cross HV"].</inlineHelpText>
    <label>Eligible Models</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>