force-app/main/default/objects/Brand_Warranty__c/fields/Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiry_Date__c</fullName>
    <description>Date when the warranty coverage ends.</description>
    <inlineHelpText>Coverage expiry date.</inlineHelpText>
    <label>Expiry Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>