force-app/main/default/objects/Brand_Warranty__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates whether the warranty is currently active. Brand 10 requires services in authorized network.</description>
    <inlineHelpText>True if warranty has not expired and conditions are met.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>