force-app/main/default/objects/Brand_Warranty__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>Date when the warranty coverage begins.</description>
    <inlineHelpText>Coverage start date.</inlineHelpText>
    <label>Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>