force-app/main/default/objects/Brand_Warranty__c/fields/Vehicle__c.field-meta.xml
<CustomField>
    <fullName>Vehicle__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Asset (vehicle) covered by this warranty record.</description>
    <inlineHelpText>The vehicle this warranty applies to.</inlineHelpText>
    <label>Vehicle</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Warranties</relationshipLabel>
    <relationshipName>Warranties</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>