force-app/main/default/objects/Brand_Warranty__c/fields/Vehicle_Model__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Model__c</fullName>
    <description>Vehicle model and trim covered (e.g., Corolla XEi G12, Hilux SRX).</description>
    <inlineHelpText>Model and generation/trim.</inlineHelpText>
    <label>Vehicle Model</label>
    <length>80</length>
    <type>Text</type>
</CustomField>