force-app/main/default/objects/Brand_Warranty__c/fields/Warranty_Type__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Type__c</fullName>
    <description>Type of warranty: Standard manufacturer warranty or Brand 10 extended program.</description>
    <inlineHelpText>Brand 10 is the 10-year extended warranty for eligible models.</inlineHelpText>
    <label>Warranty Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
                <default>true</default>
                <label>Standard</label>
            </value>
            <value>
                <fullName>Brand10</fullName>
                <label>Brand 10</label>
            </value>
            <value>
                <fullName>Extended</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>